add_subdirectory(chord)
add_subdirectory(interval)
add_subdirectory(instrument)
add_subdirectory(named)
add_subdirectory(pitched_note)
add_subdirectory(other)
add_subdirectory(unpitched_note)
add_subdirectory(percussion_instrument)
add_subdirectory(percussion_set)
add_subdirectory(rational)
add_subdirectory(rows)
add_subdirectory(song)
