target_sources(JustlyLibrary PRIVATE "justly.cpp")
target_sources(JustlyLibrary PRIVATE FILE_SET justly_headers TYPE HEADERS)

add_subdirectory(actions)
add_subdirectory(cell_editors)
add_subdirectory(cell_types)
add_subdirectory(iterators)
add_subdirectory(menus)
add_subdirectory(models)
add_subdirectory(musicxml)
add_subdirectory(other)
add_subdirectory(rows)
add_subdirectory(sound)
add_subdirectory(tables)
add_subdirectory(widgets)
add_subdirectory(xml)

